<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BuyApp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3F51B5"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_scrollFlags="scroll|enterAlways" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Basic Package Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/basicPackageCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Basic Package"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/basicPacDes" />
                    <!-- Add regular and offer prices -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/basinPrice"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Offer Price: $9.99"
                        android:textStyle="bold" />
                    <!-- Add features with bullet points -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Features:"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; Basic customization (e.g., app name, icon)" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; Get APK File" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; Splash screen" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; Loading bar" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; One year Support " />
                    <Button
                        android:id="@+id/basicPackage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Buy This Package" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Standard Package Card -->

            <androidx.cardview.widget.CardView
                android:id="@+id/standardPackageCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Standard Package"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/standardPacDes" />
                    <!-- Add regular and offer prices -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/standardPrice"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Offer Price: $39.99"
                        android:textStyle="bold" />
                    <!-- Add features with bullet points -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Features:"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; Included Basic Package" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; Ad Network Integration (Google and Meta ADs) " />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; Get Source Code" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; Documentation on Ad Network Integration and basic settings" />
                    <Button
                        android:id="@+id/standardPackage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Buy This Package" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- Similar layout structure as Basic Package Card -->

            <!-- Premium Package Card -->

            <androidx.cardview.widget.CardView
                android:id="@+id/premiumPackageCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Premium Package"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/premiumPacDes" />
                    <!-- Add regular and offer prices -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/premiumPrice"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Offer Price: $99.99"
                        android:textStyle="bold" />
                    <!-- Add features with bullet points -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Features:"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; Included Basic and Standard Package" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; Push Notification sending service" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; In-App Messaging Service" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&#8226; Documentation on how to use Firebase for Push Notification, In-app messaging and basic settings" />
                    <Button
                        android:id="@+id/premiumPackage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Buy This Package" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- Similar layout structure as Basic Package Card -->

            <androidx.cardview.widget.CardView
                android:id="@+id/customPackageCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"/>
        </LinearLayout>

    </ScrollView>




</LinearLayout>